# v-trader

./: CMakeLists.txt  README.md  main.cpp  v-trader.pro
model/: ats_application.cpp  ats_application.h  ats_av_data_provider.cpp  ats_av_data_provider.h  ats_configuration.cpp  ats_configuration.h  ats_db_client.cpp  ats_db_client.h  ats_optimizer.cpp  ats_optimizer.h  ats_order_request.cpp  ats_order_request.h  ats_utils.cpp  ats_utils.h
model/IB/: ats_ib_account.cpp  ats_ib_account.h  ats_ib_client.cpp  ats_ib_client.hpp  ats_ib_data_provider.cpp  ats_ib_data_provider.h  ats_ib_downloader.cpp  ats_ib_downloader.h  ats_ib_events.cpp  ats_ib_events.h  ats_ib_orders.cpp  ats_ib_orders.h
model/interface/: ats_idata_provider.h  ats_ijson.hpp  ats_iprocessor.h  ats_istrategy.h
model/processing/: ats_dsp_algorithms.cpp  ats_dsp_algorithms.h  ats_multiprocessor.cpp  ats_multiprocessor.h  ats_processing_cluster.cpp  ats_processing_cluster.h  ats_processor.cpp  ats_processor.h
model/processing/strategies/: ats_aroon_atr_ma_strategy.cpp  ats_aroon_atr_ma_strategy.h  ats_aroon_strategy.cpp  ats_aroon_strategy.h  ats_ma_strategy.cpp  ats_ma_strategy.h  ats_macd_adx_strategy.cpp  ats_macd_adx_strategy.h  ats_macd_strategy.cpp  ats_macd_strategy.h  ats_mama_strategy.cpp  ats_mama_strategy.hpp
ui/: ats_axis_ticker_date_time.cpp  ats_axis_ticker_date_time.h  ats_dlg_downloader.cpp  ats_dlg_downloader.h  ats_dlg_downloader.ui  ats_dlg_magnifier.cpp  ats_dlg_magnifier.h  ats_dlg_magnifier.ui  ats_dlg_optimizer.cpp  ats_dlg_optimizer.h  ats_dlg_optimizer.ui  ats_dlg_portfolio.cpp  ats_dlg_portfolio.h  ats_dlg_portfolio.ui  ats_dlg_settings.cpp  ats_dlg_settings.h  ats_dlg_settings.ui  ats_ui_utils.cpp  ats_ui_utils.h  ats_wdg_plot_indicator.cpp  ats_wdg_plot_indicator.h  ats_wdg_plot_main.cpp  ats_wdg_plot_main.h  ats_wdg_plots.cpp  ats_wdg_plots.h  ats_wdg_plots.ui  ats_wnd_main.cpp  ats_wnd_main.h  ats_wnd_main.ui
